--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,13 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.220</version>
+        </dependency>
     </dependencies>
+
 
     <!-- build config -->
     <build>
