--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <version>1.0.2.Final</version>
                 <configuration>
                     <filename>${project.build.finalName}.war</filename>
-                    <jbossHome>${env.JBOSS_HOME}</jbossHome>
+                    <!--<jbossHome>${env.JBOSS_HOME}</jbossHome>-->
                     <!--<port>8081</port> not working -->
                     <!--<server-args>-->
                         <!--<server-arg>-Djboss.http.port=8081</server-arg>-->
